renamed magasin.html to index.html

--- a/shop.html
+++ b/shop.html
@@ -15,7 +15,7 @@
       <a class="menuBandeau" href="#myList"><li>My wanted list</li></a>
       <a class="menuBandeau" href="#sponsors"><li>Our partnerships</li></a>
       <a class="menuBandeau" href="#contacts"><li>Contacts</li></a>
-      <a class="menuBandeau" href="magasin.html">Version française <em>ici</em></a>
+      <a class="menuBandeau" href="index.html">Version française <em>ici</em></a>
     </ul>
   </nav>
 </header>
