save but does not work

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             passer à côté !</h3>
         <div class="addRemoveArticle">
             <h3>Quantité : </h3>
-            <input class="quantity" max="16" min="0" onchange="calculateSubTotal()" type="number" value="0">
+            <input class="quantity"  min="0" onchange="calculateSubTotal()" type="number" value="0">
         </div>
         <div class="subTotalText">
             <p>Sous-total :
@@ -97,7 +97,7 @@
                 passer à côté !</h3>
             <div class="addRemoveArticle">
                 <h3>Quantité : </h3>
-                <input class="quantity" max="16" min="0" onchange="calculateSubTotal()" type="number" value="0">
+                <input class="quantity"  min="0" onchange="calculateSubTotal()" type="number" value="0">
             </div>
             <div class="subTotalText">
                 <p>Sous-total :
@@ -128,7 +128,7 @@
                 passer à côté !</h3>
             <div class="addRemoveArticle">
                 <h3>Quantité : </h3>
-                <input class="quantity" max="16" min="0" onchange="calculateSubTotal()" type="number" value="0">
+                <input class="quantity"  min="0" onchange="calculateSubTotal()" type="number" value="0">
             </div>
             <div class="subTotalText">
                 <p>Sous-total :
@@ -160,7 +160,7 @@
                 passer à côté !</h3>
             <div class="addRemoveArticle">
                 <h3>Quantité : </h3>
-                <input class="quantity" max="16" min="0" onchange="calculateSubTotal()" type="number" value="0">
+                <input class="quantity"  min="0" onchange="calculateSubTotal()" type="number" value="0">
             </div>
             <div class="subTotalText">
                 <p>Sous-total :
