--- a/shop.html
+++ b/shop.html
@@ -42,6 +42,7 @@
       </h2>
       <p class="productAvailability" style="color: green">Available</p>
       <p class="description"> Product details <br> </p>
+      <button class="addToCart" onclick="addToQty(0)">Add to cart</button>
       <div class="fixedPrice">
         <p class="productPrice">15</p>
         <p> £ / piece</p>
@@ -72,6 +73,7 @@
       </h2>
       <p class="productAvailability" style="color: green">Available</p>
       <p class="description"> Product details <br> </p>
+      <button class="addToCart" onclick="addToQty(1)">Add to cart</button>
       <div class="fixedPrice">
         <p class="productPrice">15</p>
         <p> £ / piece</p>
@@ -101,6 +103,7 @@
       </h2>
       <p class="productAvailability" style="color: green">Available</p>
       <p class="description"> Product details <br> </p>
+      <button class="addToCart" onclick="addToQty(2)">Add to cart</button>
       <div class="fixedPrice">
         <p class="productPrice">15</p>
         <p> £ / piece</p>
@@ -131,6 +134,7 @@
       </h2>
       <p class="productAvailability" style="color: green">Available</p>
       <p class="description"> Product details <br> </p>
+      <button class="addToCart" onclick="addToQty(3)">Add to cart</button>
       <div class="fixedPrice">
         <p class="productPrice">15</p>
         <p> £ / piece</p>
